test/classes/deitz/inherit-class-record/record_with1.good
record_with1.chpl:6: error: inheritance is not currently supported for records
